fix: add contrast to button

--- a/public/main.css
+++ b/public/main.css
@@ -200,7 +200,7 @@
   font-family: helvetica; 
   font-size: 15px;
   letter-spacing: 2px;
-  background-color: #4286f4; }
+  background-color: #1373a0; }
   
 .slide-button:active {
   color: black; }
